css/styles.css
:root{
    /*First choice*/
    --Prussian-Blue: rgb(11, 60, 93);
    --Sky-Blue: rgb(50, 140, 193);
    --Gold-Leaf: rgb(217, 179, 16);
    --Ivory-Black: rgb(29, 39, 49);

    /*Other choice*/
    --Ice: rgb(153, 211, 223); 
    --Fresh-Water: rgb(136, 187, 214);
    --Fresh-Water-Faded-5: rgba(136, 187, 214, .5);
    --Fresh-Water-light: rgb(198, 222, 236);
    --Fresh-Water-Complement: rgb(78,135,140);
    --Logo-Background: rgb(101,184,145);
    --Plaster: rgb(205, 205, 205);
    --Linen: rgb(233, 233, 233);
}

/*Custom browser specific reset*/

h1{
    -webkit-margin-before: 0em;
    -webkit-margin-after: 0em;
}

#badge-slider{
    margin: 0 auto;
}

#badge-slider > img{
    width: 100px;
    display: inline;
}

body{
    margin: 0;
}

footer{
    width: 75%;
    margin: 0 auto;
    background-color: black;
    color: lightblue;
}

html, body{
    height: 100%;
    margin: 0;
}

body{
    background-color: var(--Ivory-Black);
}

.wrapper{
    max-width: 1100px;
    width: 75%;
    margin: 0 auto;
    background-color: var(--Plaster);
}

.sticky{
    margin-bottom: -50px;
    min-height: 100%;
}

.wrapper section{
    padding: 20px;
}

.container{
    width: 75%;
    margin: 0 auto;
}

header{
    min-height: 165px;
    background-color: var(--Fresh-Water-Complement);
}

.flex-container{
    display: flex;
    flex-direction: row;
}

.flex-3of4{
    align-self: center;
    flex: 3    
}

.flex-1of2{
    flex: 1;
    margin: 0 auto;
    padding: 0 20px;
}

.flex-right{
    justify-content: flex-end;
}

.flex-item{
    flex:1;
    min-width: 350px;
}

.nav > li{
    vertical-align: middle;
    margin: 0 10px;
    padding: 10px 0;
    border-radius: 10px;
    background-color: var(--Fresh-Water-light);
    list-style-type: none;
}

.nav{
    margin-left: 10px;
}

.nav a{
    padding: 10px;
    text-decoration: none;
    color: var(--Prussian-Blue);
}

.logo{
    width: 50px;
    height: 50px;
    background-color: var(--Logo-Background);
}

h1{
    padding-bottom: 10px;
    text-align: center;
    margin: auto 0;
}

p{
    min-width: 250px;
}

footer,
.push{
    max-width: 1100px;
    height: 50px;
}

.myself{
    display: inherit;
    margin: 0 auto;
    border-radius: 10px;
}

.treehouse-points{
    width: 300px;
    display: inherit;
    margin: 0 auto;
}

canvas{
    display: none;
}

@media (max-width: 768px){
    .wrapper{
        width: 100%;
    }
    footer{
        width: 100%;
    }
    .container{
        width: 95%;
    }
    .flex-container{
        flex-wrap: wrap;
    }
    h1{
        padding-top: 10px;
    }
}

@media (min-width: 768px) and (max-width: 1024px){
    .wrapper{
        width: 100%;
    }
    footer{
        width: 100%;
    }
    .container{
        width: 90%;
    }
}

@media (min-width: 1024px){

}

